--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@pdf-lib/fontkit": "^1.1.1",
     "next": "15.5.0",
+    "pdf-lib": "^1.17.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
