--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "exceljs": "^4.4.0",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
