컴포넌트 이관 테스트

--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@types/react-pdf": "^6.2.0",
+    "ag-grid-react": "^34.3.1",
     "exceljs": "^4.4.0",
+    "luckysheet": "^2.1.13",
     "next": "15.5.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-pdf": "^10.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
